# deadlock

./: LICENSE  Makefile  QUICKSTART.md  README.md  WINDOWS_QUICK_START.md  requirements-dev.txt
.github/workflows/: ci.yml
engine/: __init__.py  policies.py
examples/: simple_deadlock.json
niki/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1
niki/engine/: banker.py  rag.py  state.py
niki/examples/: banker_safe.json  banker_unsafe.json  dining_philosophers.json
niki/simulator/: run.py  scenario.py
niki/tests/: __init__.py  conftest.py  test_banker.py  test_rag.py
niki/visualizer/: __init__.py  app.py  graph_renderer.py
simulator/: __init__.py  dispatcher.py
tests/: test_state.py
